--- a/app/views/hotel_amenities/index.html.erb
+++ b/app/views/hotel_amenities/index.html.erb
@@ -1,131 +1,90 @@
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<%= render 'shared/back', path: reservation_path(@reservation) %>
+
 <style>
-  .swiper-container {
-      width: 600px;
-      height: 100%%;
+  [data-toggle="collapse"] .fa:before {   
+    content: "\f139";
   }
 
-  .swiper-pagination-bullet {
-    width: auto;
-    height: 20px;
-    text-align: center;
-    line-height: 20px;
-    word-wrap: nowrap;
-    font-size: 12px;
-    color: black;
-    opacity: 1;
-    background: none;
-  }
-
-  .swiper-pagination-bullet-active {
-    background: none;
-    color: orangered;
-    font-size: 13px;
-    transform: translateY(-3px);
-    transition: transform 0.2s ease-in-out, font-size 0.2s ease-in-out;
-  }
-
-  .swiper-pagination-bullet-active:focus {
-    outline: 0 !important;
-  }
-
-  .swiper-pagination-bullet:focus {
-    outline: 0 !important;
+  [data-toggle="collapse"].collapsed .fa:before {
+    content: "\f13a";
   }
 </style>
-<%= render 'shared/back', path: reservation_path(@reservation) %>
 
 <!-- Slider main container -->
 <div class="swiper-container">
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-        <!-- Slides -->
-        
-        <%= render 'hotel_amenities/swiper_slide', { text: @essentials.first.amenity.category, hotel_amenities: @essentials, description: 'Things you couldn\'t go without. Find them in your room or request extra.' } %>
+  <!-- Additional required wrapper -->
+  <div class="swiper-wrapper">
+    <!-- Slides -->
+    <%= render 'hotel_amenities/swiper_slide', { text: @essentials.first.amenity.category, hotel_amenities: @essentials, description: 'Things you couldn\'t go without. Find them in your room or request extra.' } %>
 
-        <%= render 'hotel_amenities/swiper_slide', { text: @requestables.first.amenity.category, hotel_amenities: @requestables, description: 'Order additional items for your stay. (Charges may apply)' } %>
+    <%= render 'hotel_amenities/swiper_slide', { text: @requestables.first.amenity.category, hotel_amenities: @requestables, description: 'Order additional items for your stay. (Charges may apply)' } %>
 
-        <%= render 'hotel_amenities/swiper_slide', { text: @bed_bath.first.amenity.category, hotel_amenities: @bed_bath, description: 'Stay squeaky clean during your stay.' } %>
+    <%= render 'hotel_amenities/swiper_slide', { text: @bed_bath.first.amenity.category, hotel_amenities: @bed_bath, description: 'Stay squeaky clean during your stay.' } %>
 
-        <%= render 'hotel_amenities/swiper_slide', { text: @kitchen.first.amenity.category, hotel_amenities: @kitchen, description: 'Pots, pans, appliances, we have what you need to whip up a feast.' } %>
+    <%= render 'hotel_amenities/swiper_slide', { text: @kitchen.first.amenity.category, hotel_amenities: @kitchen, description: 'Pots, pans, appliances, we have what you need to whip up a feast.' } %>
 
-        <%= render 'hotel_amenities/swiper_slide', { text: @other.first.amenity.category, hotel_amenities: @other, description: 'Things to make your life a bit easier.' } %>
-    </div>
-    <!-- If we need pagination -->
-    <div class="swiper-pagination">
-      <p>hello</p>
-      <p>hello2</p>
-      <p>hello3</p>
-      <p>hello4</p>
-      <p>hello5</p>
+    <%= render 'hotel_amenities/swiper_slide', { text: @other.first.amenity.category, hotel_amenities: @other, description: 'Things to make your life a bit easier.' } %>
+  </div>
+  <!-- If we need pagination -->
+  <div class="swiper-pagination"></div>
 
-    </div>
-
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+  <!-- If we need navigation buttons -->
+  <div class="carousel-navigation swiper-button-prev" style="color: black;"></div>
+  <div class="carousel-navigation swiper-button-next" style="color: black;"></div>
 </div>
 
 
-<% if false %>
-  
-  <%= render 'reservations/title_down_arrows', text: "Amenities" %>
-  <div class="d-flex flex-column align-items-center text-align-center w-100">
-    <p style="text-align: center; line-height: 1.2em; margin-bottom: 8px;">Things you couldn't go without.<br>Find them in your room or request extra.</p>
-  </div>
+                        <% if false %>
+                          
+                          <%= render 'reservations/title_down_arrows', text: "Amenities" %>
+                          <div class="d-flex flex-column align-items-center text-align-center w-100">
+                            <p style="text-align: center; line-height: 1.2em; margin-bottom: 8px;">Things you couldn't go without.<br>Find them in your room or request extra.</p>
+                          </div>
 
-  <div class="container font-grey px-3 py-1 rounded" style="background-color: white; width: 85%;">
-    <% @hotel_amenities.each do |hotel_amenity| %>
-      <div class="d-flex justify-content-between mb-1 py-1 pl-5 align-items-center" style="border-bottom: 1px solid black;">
-          <div class="d-flex align-items-center" style="height: 38px">
-            <%= image_tag("icons/#{hotel_amenity.amenity.name.gsub(' ', '_').gsub('/', ':').downcase}.svg", style: "width: 28px; height: 28px;  margin-right: 32px;") %>
-            <p class="mb-0" style="font-size: 1.2em;"><%= hotel_amenity.amenity.name %></p>
-          </div>
+                          <div class="container font-grey px-3 py-1 rounded" style="background-color: white; width: 85%;">
+                            <% @hotel_amenities.each do |hotel_amenity| %>
+                              <div class="d-flex justify-content-between mb-1 py-1 pl-5 align-items-center" style="border-bottom: 1px solid black;">
+                                  <div class="d-flex align-items-center" style="height: 38px">
+                                    <%= image_tag("icons/#{hotel_amenity.amenity.name.gsub(' ', '_').gsub('/', ':').downcase}.svg", style: "width: 28px; height: 28px;  margin-right: 32px;") %>
+                                    <p class="mb-0" style="font-size: 1.2em;"><%= hotel_amenity.amenity.name %></p>
+                                  </div>
 
-          <% if hotel_amenity.requestable == true%>
-            <%= form_tag reservation_requests_path, method: :post do %>
-              <%= hidden_field_tag :hotel_amenity_id, hotel_amenity.id %>
-              <%= submit_tag "Request", class: "btn btn-primary" %>
-            <% end %>
-          <% end %>
-      </div>
-    <% end %>
+                                  <% if hotel_amenity.requestable == true%>
+                                    <%= form_tag reservation_requests_path, method: :post do %>
+                                      <%= hidden_field_tag :hotel_amenity_id, hotel_amenity.id %>
+                                      <%= submit_tag "Request", class: "btn btn-primary" %>
+                                    <% end %>
+                                  <% end %>
+                              </div>
+                            <% end %>
 
-    <div class="container-flex-amenities">
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
-        <button class="btn btn-primary mb-1" style="width:140px">
-          <%= image_tag "icons/towels_&_linens.svg", height:50, class:"icon-white" %>
-          <br>Essentials
-        </button>
-      <% end %>
+                            <div class="container-flex-amenities">
+                              <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
+                                <button class="btn btn-primary mb-1" style="width:140px">
+                                  <%= image_tag "icons/towels_&_linens.svg", height:50, class:"icon-white" %>
+                                  <br>Essentials
+                                </button>
+                              <% end %>
 
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Bed & Bath"), style: "color: white;" do %>
-        <button class="btn btn-primary mb-1" style="width:140px"><%= image_tag "icons/washer.svg", height:50, class:"icon-white" %> <br> Bed and Bath</button>
-      <% end %>
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Kitchen"), style: "color: white;" do %>
-        <button class="btn btn-primary mb-1" style="width:140px"><%= image_tag "icons/pots_&_pans.svg", height:50, class:"icon-white" %> <br> Kitchen</button>
-      <% end %>
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Other"), style: "color: white;" do %>
-        <button class="btn btn-primary mb-1" style="width:140px"><%= image_tag "icons/phone_charger.svg", height:50, class:"icon-white" %> <br>Others</button>
-      <% end %>
-    </div>
-  </div>
-<% end %>
-
+                              <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Bed & Bath"), style: "color: white;" do %>
+                                <button class="btn btn-primary mb-1" style="width:140px"><%= image_tag "icons/washer.svg", height:50, class:"icon-white" %> <br> Bed and Bath</button>
+                              <% end %>
+                              <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Kitchen"), style: "color: white;" do %>
+                                <button class="btn btn-primary mb-1" style="width:140px"><%= image_tag "icons/pots_&_pans.svg", height:50, class:"icon-white" %> <br> Kitchen</button>
+                              <% end %>
+                              <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Other"), style: "color: white;" do %>
+                                <button class="btn btn-primary mb-1" style="width:140px"><%= image_tag "icons/phone_charger.svg", height:50, class:"icon-white" %> <br>Others</button>
+                              <% end %>
+                            </div>
+                          </div>
+                        <% end %>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
 <script>
   const categories = ['Essentials', 'Requests', 'Bed & Bath', 'Kitchen', 'Other']
   var mySwiper = new Swiper('.swiper-container', {
     // Optional parameters
     loop: true,
-
-    // If we need pagination
-    // pagination: {
-    //   el: '.swiper-pagination',
-    // },
 
     pagination: {
       el: '.swiper-pagination',
@@ -141,7 +100,5 @@
       nextEl: '.swiper-button-next',
       prevEl: '.swiper-button-prev',
     },
-
-    // And if we need scrollbar
-  })
+  });
 </script>
