--- a/app/views/reservations/_change_times.html.erb
+++ b/app/views/reservations/_change_times.html.erb
@@ -10,7 +10,8 @@
 	}
 
 	input[type=radio]:checked + label {
-		background-color: #D43B3B;
+		background-color: orangered;
+		border: 1px solid white;
 		color: white;
 		transition: background-color 0.2s, color: 0.2s;
 	}
@@ -25,12 +26,12 @@
 		margin-bottom: 0;
 		font-size: 14px;
 		line-height: 20px;
-		color: #D43B3B;
+		color: black;
 		text-align: center;
 		vertical-align: middle;
 		cursor: pointer;
 		background-color: white;
-		border: 1px solid #D43B3B;
+		border: 1px solid orangered;
 		margin-bottom: 4px;
 		min-width: 150px;
 	}
