--- a/app/views/reservations/_change_times.html.erb
+++ b/app/views/reservations/_change_times.html.erb
@@ -45,21 +45,24 @@
 <!-- <p><%= reservation.check_in_date.strftime('%b %e') %></p> -->
 
 <div  class="container-fluid d-flex w-100 font-grey card-show-page">
+			<% in_time = Time.new(2000, 1, 1, 15) %>
+<%= in_time %>
+
 	<%= simple_form_for :request, url: reservation_time_requests_path(@reservation),  html: { class: "d-flex", style: "flex-wrap: wrap;"}, method: :post do |f| %>
 
 		<div class="d-flex pr-0" style="flex-direction: column; flex-basis: 50%;">
 			<!-- <p class="mb-0 font-bright-pink">Check-in:</p> -->
 			<!-- <p class="mb-0"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p> -->
-			<% in_time = Time.find_zone('Tokyo').local(2000, 1, 1, 15) %>
-			<% out_time = Time.find_zone('Tokyo').local(2000, 1, 1, 11) %>
+			<% in_time = Time.new(2000, 1, 1, 15) %>
+			<% out_time = Time.new(2000, 1, 1, 11) %>
 			<% arrivals = ['3:00PM~ (¥0)', '2:00PM (¥1,000)', '1:00PM (¥2,000)', '12:00PM (¥3,000)', '11:00AM (¥4,000)', '11:00AM (¥4,000)'] %>
 			<%= f.input :arrival_time, as: :radio_buttons, required: false, collection: [
-				[in_time - 5.hour, '10:00AM (¥5,000)'	],
-				[in_time - 4.hour, '11:00AM (¥4,000)'	],
-				[in_time - 3.hour, '12:00PM (¥3,000)'	],
-				[in_time - 2.hour, '1:00PM (¥2,000)'	],
+				[in_time, 				 '3:00PM~ (¥0)'			],
 				[in_time - 1.hour, '2:00PM (¥1,000)'	],
-				[in_time, 				 '3:00PM~ (¥0)'			]
+				[in_time - 2.hour, '1:00PM (¥2,000)'	],
+				[in_time - 3.hour, '12:00PM (¥3,000)'	],
+				[in_time - 4.hour, '11:00AM (¥4,000)'	],
+				[in_time - 5.hour, '10:00AM (¥5,000)'	]
 			], label_method: :second, value_method: :first %>
 		</div>
 
@@ -68,11 +71,11 @@
 			<!-- <p class="mb-0"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p> -->
 			<%= f.input :departure_time, as: :radio_buttons, required: false, collection: [
 				[out_time, '~11:00AM (¥0)'],
-				[out_time - 1.hour, '~12:00PM (¥1,000)'],
-				[out_time - 2.hour, '~1:00PM (¥2,000)'],
-				[out_time - 3.hour, '~2:00PM (¥3,000)'],
-				[out_time - 4.hour, '~3:00PM (¥4,000)'],
-				[out_time - 5.hour, '~4:00PM (¥5,000)']
+				[out_time + 1.hour, '~12:00PM (¥1,000)'],
+				[out_time + 2.hour, '~1:00PM (¥2,000)'],
+				[out_time + 3.hour, '~2:00PM (¥3,000)'],
+				[out_time + 4.hour, '~3:00PM (¥4,000)'],
+				[out_time + 5.hour, '~4:00PM (¥5,000)']
 			], label_method: :second, value_method: :first %>
 		</div>
 
