--- a/app/views/reservations/_reservation_overview.html.erb
+++ b/app/views/reservations/_reservation_overview.html.erb
@@ -3,13 +3,13 @@
     <div class="border-right pr-0" style="flex: 0 0 50%">
       <p class="font-bright-pink mb-0">Check in: </p>
       <p class="mb-0" style="font-size: 2.5vh"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
-      <p class="m-0" style="font-size: 3vh"><%= (reservation.arrival_time + 9.hours).strftime("%l:%M%p~") %></p>
+      <p class="m-0" style="font-size: 3vh"><%= (reservation.arrival_time).strftime("%l:%M%p~") %></p>
     </div>
 
     <div class="ml-3" style="flex: 0 0 50%">
       <p class="font-bright-pink mb-0">Check out: </p>
       <p class="m-0" style="font-size: 2.5vh"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
-      <p class="m-0" style="font-size: 3vh" ><%= reservation.check_out_date.strftime("~#{(reservation.departure_time + 9.hours).strftime("%l:%M%p")}") %></p>
+      <p class="m-0" style="font-size: 3vh" ><%= reservation.check_out_date.strftime("~#{(reservation.departure_time).strftime("%l:%M%p")}") %></p>
     </div>
   </div>
 
