--- a/app/assets/stylesheets/components/_font_color.scss
+++ b/app/assets/stylesheets/components/_font_color.scss
@@ -7,9 +7,17 @@
 }
 
 .font-bright-pink {
-  color: $orange
+  color: $bright-pink
 }
 
 p.thick {
   font-weight: bold;
+}
+
+.font-cadetblue {
+  color: cadetblue;
+}
+
+.font-light-purple {
+  color: $light-purple;
 }
