--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,8 +11,8 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $light-purple;
-$success:    $green;
+$primary:    cadetblue;
+$success:    $light-purple;
 $info:       $yellow;
 $danger:     $red;
 $warning:    $orange;
