--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
     Find like-minded dining buddies
     </div>
 
-  <h5 class="left-text font-green">What Are You Waiting For?</h5>
+  <!-- <h5 class="thick font-light-purple" style="text-align:center;">What Are You Waiting For?</h5> -->
 
 
       <% if user_signed_in? %>
