--- a/app/views/reservations/_buddy.html.erb
+++ b/app/views/reservations/_buddy.html.erb
@@ -1,5 +1,5 @@
 <div class="card-show-page font-grey">
-  <h5 class="font-bright-pink">More Delicious Together</h5>
+  <h5 class="font-cadetblue">More Delicious Together</h5>
   <p>You can participate / orgainize dining out or cooking sessions with other guests staying at Section L.</p>
   <p>Like-minded buddies can make your trip more fun. What are you waiting for?</p>
 </div>
