--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -17,8 +17,8 @@
   <% end %>
 
   <div class="bottom-sticky double-buttons">
-    <a href="https://www.section-l.co" target="_blank" class="btn btn-dark">Book New</a>
-    <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-dark"%>
+    <a href="https://www.section-l.co" target="_blank" class="btn btn-success">Book New</a>
+    <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-primary"%>
   </div>
 </div>
 
