--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -27,7 +27,7 @@
                     required: true,
                     input_html: { autocomplete: "check_in_date", style: "border: 1px solid black;" }%>
 
-        <%= f.submit "Find Your Booking", class: 'btn btn-primary button-green w-100 mt-2 mb-4', style: "color: white; background-color: #ea5033; border: 1px solid #ea5033;" %>
+        <%= f.submit "Find Your Booking", class: 'btn btn-primary w-100 mt-2 mb-4', style: "color: white; background-color: cadetblue;" %>
         <%= link_to 'Cancel', reservations_path, class: '', style: 'margin: 0 auto; color: black;' %>
     </div>
   <% end %>
