--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -37,14 +37,14 @@
 
 .nav-pills .nav-link {
   color: white;
-  background-color: $orange;
-  border: 1px solid $orange;
+  background-color: $light-purple;
+  border: 1px solid $light-purple;
 }
 
 .nav-pills .nav-link.active {
-  color: $orange;
+  color: $light-purple;
   background-color: white;
-  border: 1px solid $orange;
+  border: 1px solid $light-purple;
   img {
     filter: invert(0.3);
   }
@@ -68,3 +68,5 @@
     transition: border 0.3s, filter 0.3s;
   }
 }
+
+
