--- a/app/views/hotel_amenities/_swiper_slide.html.erb
+++ b/app/views/hotel_amenities/_swiper_slide.html.erb
@@ -23,12 +23,13 @@
         <% end %>
 
         <% if hotel_amenity.requestable == true %>
+
           <div class="amenity-list-item py-1 w-75 btn btn-primary" style="position: relative; border: none; background-color: white; color: cadetblue; margin-bottom: 4px;">
             <%= image_tag("icons/#{hotel_amenity.amenity.name.gsub(' ', '_').gsub('/', ':').downcase}.svg", style: "filter: invert(0.2);") %>
             <p class="mb-0"><%= hotel_amenity.amenity.name %></p>
 
             <div id='amenity-<%= hotel_amenity.id %>'>
-              <%= form_tag reservation_requests_path, method: :post do %>
+              <%= form_tag reservation_requests_path, method: :post, remote: true do %>
                 <%= hidden_field_tag :hotel_amenity_id, hotel_amenity.id %>
                 <%= submit_tag '', data: { confirm: "Are you sure you wish to request #{hotel_amenity.amenity.name}?" }, class: "btn", style: "position: absolute; top: 0; left: 0; width: 100%; height: 100%;" %>
               <% end %>
