--- a/app/views/staff/reservations/_requests.html.erb
+++ b/app/views/staff/reservations/_requests.html.erb
@@ -10,7 +10,7 @@
   <%# TIME REQUEST CARD: %>
   <% if request.class == TimeRequest %>
     
-    <div class="request-card">
+    <div class="request-card" id="time-request-<%= request.id %>">
       
       <%# Red border for if the card is on hold (styling is up to your disgression) %>
       <div class="request-card-content"  style="<%= 'border: 2px dotted red;' if request.status == 'hold' %>">
@@ -36,7 +36,7 @@
 
         <div class="request-card-buttons">
           <%# button for accepting a request. Updates both reservation & request. %>
-          <%= form_for request, url: reservation_time_request_path(reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
+          <%= form_for request, url: reservation_time_request_path(reservation, request), method: :patch, remote: true, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'accepted' %>
               <% if request.check_in == true %>
                 <%= f.fields_for reservation do |a| %>
@@ -51,14 +51,14 @@
           <% end %>
           
           <%# time request decline button %>
-          <%= form_for request, url: reservation_time_request_path(reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
+          <%= form_for request, url: reservation_time_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'declined' %>
             <%= f.submit 'Decline', class: 'btn btn-primary flex-grow-1' %>
           <% end %>
 
           <%# time request hold button: Disappears after you've clicked "hold" %>
           <% unless request.status == "hold" %>
-            <%= form_for request, url: reservation_time_request_path(reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
+            <%= form_for request, url: reservation_time_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
               <%= f.hidden_field :status, value: 'hold' %>
               <%= f.submit 'Hold', class: 'btn btn-secondary flex-grow-1' %>
             <%end %>
@@ -78,7 +78,7 @@
   <% else %>
 
     <%# AMENITY REQUEST CARD:%>
-    <div class="request-card">
+    <div class="request-card" id="amenity-request-<%= request.id %>">
       <%# If it's an AMENITY request, this is displayed: %>
       <div class="request-card-content" style="<%= 'border: 2px dotted red;' if request.status == 'hold' %>">
         <strong><p class="mb-0">Requested:</p></strong>
@@ -92,18 +92,18 @@
       <div class="request-card-buttons">
       
         <% if request.status == "pending" || request.status == "hold" %>
-          <%= form_for request, url: reservation_request_path(reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
+          <%= form_for request, url: reservation_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'accepted' %>
             <%= f.submit 'Accept', class: 'btn btn-success flex-grow-1' %>
           <% end %>
 
-          <%= form_for request, url: reservation_request_path(reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
+          <%= form_for request, url: reservation_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
             <%= f.hidden_field :status, value: 'declined' %>
             <%= f.submit 'Decline', class: 'btn btn-primary flex-grow-1' %>
           <% end %>
           
           <% unless request.status == "hold" %>
-            <%= form_for request, url: reservation_request_path(reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
+            <%= form_for request, url: reservation_request_path(reservation, request), remote: true, method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
               <%= f.hidden_field :status, value: 'hold' %>
               <%= f.submit 'Hold', class: 'btn btn-secondary flex-grow-1' %>
             <% end %>
