--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -79,12 +79,17 @@
   background-color: white;
   width: 100%;
   border-radius: 5px;
-  padding: 20px 20px 5px 20px;
+  padding: 16px 16px 16px 16px;
 }
 
 .card-reservation-time {
   display: flex;
-  padding: 10px 20px 5px 20px;
+  justify-content: space-between;
+  padding: 12px 20px 8px 20px;
+  div {
+    padding: 0;
+  }
+
 }
 
 .border-right {
