--- a/app/views/reservations/_reservation_overview.html.erb
+++ b/app/views/reservations/_reservation_overview.html.erb
@@ -1,57 +1,83 @@
+<style>
+  .reservation-body-header {
+    margin-bottom: .3em;
+    font-weight: bold;
+    color: cadetblue;
+    line-height: 1em;
+  }
+
+  .reservation-body-text {
+    line-height: 1em;
+    margin-bottom: 0;
+  }
+
+  .body-text-large {
+    font-size: 1.4em;
+    line-height: 1.3em;
+    margin-bottom: 0;
+  }
+</style>
+
 <div class="font-grey">
-  <div class="card-show-page card-reservation-time d-flex">
-    <div class="border-right pr-0" style="flex: 0 0 50%">
-      <p class="thick mb-0 font-cadetblue">Check in: </p>
-      <p class="mb-0" style="font-size: 2.5vh"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
-      <p class="m-0" style="font-size: 3vh"><%= (reservation.arrival_time).strftime("%l:%M%p~") %></p>
+  <div class="card-show-page card-reservation-time">
+    <div>
+      <h6 class="reservation-body-header">Check-in </h6>
+      <p class="body-text-large"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
+      <p class="body-text-large"><%= (reservation.arrival_time).strftime("%l:%M%p") %></p>
     </div>
 
-    <div class="ml-3" style="flex: 0 0 50%">
-      <p class="thick mb-0 font-cadetblue">Check out: </p>
-      <p class="m-0" style="font-size: 2.5vh"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
-      <p class="m-0" style="font-size: 3vh" ><%= reservation.check_out_date.strftime("~#{(reservation.departure_time).strftime("%l:%M%p")}") %></p>
+    <div class="d-flex flex-column align-items-end">
+      <h6 class="reservation-body-header">Check-out </h6>
+      <p class="body-text-large"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
+      <p class="body-text-large" ><%= reservation.check_out_date.strftime("#{(reservation.departure_time).strftime("%l:%M%p")}") %></p>
     </div>
   </div>
 
   <a data-toggle="collapse" href="#time-request" class="btn btn-dark button-full-width mt-1 mb-1">Change Check-In/Out Time</a>
   <div class="collapse" id='time-request'> <%= render 'change_times', reservation: @reservation %> </div>
 
-  <div class="card-show-page mt-3">
-    <p class="thick mb-0 font-cadetblue">Address:</p>
-    <p class="mb-0"> <%= reservation.hotel.name %> </p>
+  <div class="card-show-page mt-2">
+    <p class="reservation-body-header">Address:</p>
+    <p class="reservation-body-text"> <%= reservation.hotel.name %> </p>
     <p> <%= reservation.hotel.address %></p>
-    <p class="thick mb-0 font-cadetblue">Room Number:</p>
-    <p class="mb-0"> <%= reservation.room_number %></p>
+    <p class="reservation-body-header">Room Number:</p>
+    <p class="reservation-body-text"> <%= reservation.room_number %></p>
   </div>
   <a class="btn btn-dark button-full-width mt-1 mb-1" target="_blank" href="https://goo.gl/maps/hD8UjpGJk3ppnxtUA">Open on Google Map</a>
 
-  <div class="card-show-page mt-3">
-    <p class="thick mb-0 font-cadetblue">Reservation Number: </p>
-    <p><%= reservation.reservation_number %></p>
+  <div class="card-show-page mt-2">
+    <p class="reservation-body-header">Reservation Number: </p>
+    <p class="reservation-body-text"><%= reservation.reservation_number %></p>
   </div>
-  <div class="card-show-page  mt-3">
-    <p class="thick mb-0 font-cadetblue">Smartlock & Online Check-in: </p>
-    <p class="mb-0">Please read before arrival</p>
+  <div class="card-show-page  mt-2">
+    <p class="reservation-body-header">Smartlock & Online Check-in: </p>
+    <p class="reservation-body-text">Please read before arrival</p>
   </div>
 
   <button type="button" class="btn btn-dark button-full-width mt-1 mb-1">Read Check-In Manual</button>
 
-  <div class="card-show-page my-3 pb-3">
-    <p class="thick mb-1 font-cadetblue">Amenities </p>
-    <p class="mb-2">Check out basic & requestable amenities</p>
-    <div class="container-flex-amenities">
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
-        <button class="btn btn-dark mb-1" style="width:150px"> <%= image_tag "icons/towels_&_linens.svg", height:50, class:"icon-white" %><br>Essentials</button>
-      <% end %>
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Bed & Bath"), style: "color: white;" do %>
-      <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/washer.svg", height:50, class:"icon-white" %> <br> Bed and Bath</button>
-      <% end %>
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Kitchen"), style: "color: white;" do %>
-      <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/pots_&_pans.svg", height:50, class:"icon-white" %> <br> Kitchen</button>
-      <% end %>
-      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Other"), style: "color: white;" do %>
-      <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/phone_charger.svg", height:50, class:"icon-white" %> <br>Others</button>
-      <% end %>
-    </div>
+  <div class="card-show-page mt-2 pb-3">
+    <p class="reservation-body-header">Amenities </p>
+    <p class="reservation-body-text">Check out basic & requestable amenities</p>
   </div>
+  <button type="button" class="btn btn-dark button-full-width mt-1 mb-3">See Amenities</button>
+
 </div>
+
+<% if false %>
+      <div class="container-flex-amenities">
+        <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
+          <button class="btn btn-dark mb-1" style="width:150px"> <%= image_tag "icons/towels_&_linens.svg", height:50, class:"icon-white" %><br>Essentials</button>
+        <% end %>
+        <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Bed & Bath"), style: "color: white;" do %>
+        <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/washer.svg", height:50, class:"icon-white" %> <br> Bed and Bath</button>
+        <% end %>
+        <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Kitchen"), style: "color: white;" do %>
+        <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/pots_&_pans.svg", height:50, class:"icon-white" %> <br> Kitchen</button>
+        <% end %>
+        <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Other"), style: "color: white;" do %>
+        <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/phone_charger.svg", height:50, class:"icon-white" %> <br>Others</button>
+        <% end %>
+      </div>
+  
+<% end %>
