--- a/app/views/reservations/_reservation_overview.html.erb
+++ b/app/views/reservations/_reservation_overview.html.erb
@@ -1,35 +1,27 @@
-<style>
-  .reservation-body-header {
-    margin-bottom: .3em;
-    font-weight: bold;
-    color: cadetblue;
-    line-height: 1em;
-  }
-
-  .reservation-body-text {
-    line-height: 1em;
-    margin-bottom: 0;
-  }
-
-  .body-text-large {
-    font-size: 1.4em;
-    line-height: 1.3em;
-    margin-bottom: 0;
-  }
-</style>
-
 <div class="font-grey">
   <div class="card-show-page card-reservation-time">
     <div>
       <h6 class="reservation-body-header">Check-in </h6>
       <p class="body-text-large"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
       <p class="body-text-large"><%= (reservation.arrival_time).strftime("%l:%M%p") %></p>
+      <% if @latest_in_request %>
+        <p class="reservation-body-text d-flex align-items-center" style="color: orange;">
+          <%= @latest_in_request.time.strftime("%l:%M%p") %>
+          <span style="font-size: 12px; margin-left: 4px;">pending</span>
+        </p>       
+      <% end %>
     </div>
 
     <div class="d-flex flex-column align-items-end">
       <h6 class="reservation-body-header">Check-out </h6>
       <p class="body-text-large"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
       <p class="body-text-large" ><%= reservation.check_out_date.strftime("#{(reservation.departure_time).strftime("%l:%M%p")}") %></p>
+      <% if @latest_out_request %>
+          <p class="reservation-body-text d-flex align-items-center" style="color: orange;">
+            <span style="font-size: 12px; margin-right: 4px;">pending</span>
+            <%= @latest_out_request.time.strftime("%l:%M%p") %>
+          </p> 
+      <% end %>
     </div>
   </div>
 
@@ -79,5 +71,4 @@
         <button class="btn btn-dark mb-1" style="width:150px"><%= image_tag "icons/phone_charger.svg", height:50, class:"icon-white" %> <br>Others</button>
         <% end %>
       </div>
-  
 <% end %>
