--- a/app/assets/stylesheets/components/_font_color.scss
+++ b/app/assets/stylesheets/components/_font_color.scss
@@ -3,7 +3,7 @@
 }
 
 .font-grey {
-  color: $font-grey
+  color: $font-gray
 }
 
 .font-bright-pink {
@@ -20,4 +20,8 @@ p.thick {
 
 .font-light-purple {
   color: $light-purple;
+}
+
+.font-purple {
+  color: $purple;
 }
