--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,13 +6,13 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 $background-grey;
+$body-bg:                 $background-gray;
 $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    cadetblue;
-$success:    $light-purple;
+$primary:    $green;
+$success:    $purple;
 $info:       $yellow;
 $danger:     $red;
 $warning:    $orange;
