--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,6 +1,5 @@
 <%= render 'shared/back', path: 'root_path' %>
 
-
 <%= render 'reservations/title_down_arrows', text: "Your Stays" %>
 
 
@@ -16,9 +15,9 @@
     <% end %>
   <% end %>
 
-  <div class="bottom-sticky double-buttons">
-    <a href="https://www.section-l.co" target="_blank" class="btn btn-success">Book New</a>
-    <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-primary"%>
-  </div>
 </div>
 
+  <div class="bottom-sticky double-buttons">
+    <a href="https://www.section-l.co" target="_blank" class="btn btn-warning">Book New</a>
+    <%= link_to 'Find Your Booking', new_reservation_path, class: "btn btn-primary"%>
+  </div>
